tested all endpoint and fixed broken endpoints
